[tool.poetry]
name = "invoice-generation"
version = "0.1.0"
description = ""
authors = ["Łukasz Kuk <lukasz010420@gmail.com>"]
readme = "README.md"
packages = [{include = "invoice_generation"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
fpdf = "^1.7.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
